...
            "state" : "translated",
            "value" : "Administrador"
          }
        }
      }
    },
    "AI" : {
      "extractionState" : "stale",
      "localizations" : {
        "pt" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "IA"
...
            "state" : "translated",
            "value" : "A IA está escrevendo…"
          }
        }
      }
    },
    "AI needs an account" : {
      "extractionState" : "stale",
      "localizations" : {
        "pt" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "A IA precisa de uma conta"
...
            "state" : "translated",
            "value" : "Escolha a área de trabalho"
          }
        }
      }
    },
    "Choose space" : {
      "extractionState" : "stale",
      "localizations" : {
        "pt" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Escolher espaço"
...
            "state" : "translated",
            "value" : "Criar conta"
          }
        }
      }
    },
    "Create an account" : {
      "extractionState" : "stale",
      "localizations" : {
        "pt" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Criar uma conta"
...
            "state" : "translated",
            "value" : "Opções de fonte"
          }
        }
      }
    },
    "Forgot password?" : {
      "extractionState" : "stale",
      "localizations" : {
        "pt" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Esqueceu a senha?"
...
            "state" : "translated",
            "value" : "Gratuito"
          }
        }
      }
    },
    "General" : {
      "extractionState" : "stale",
      "localizations" : {
        "pt" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Geral"
...
            "state" : "translated",
            "value" : "Novo documento"
          }
        }
      }
    },
    "New folder" : {
      "extractionState" : "stale",
      "localizations" : {
        "pt" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nova pasta"
...
            "state" : "translated",
            "value" : "Salvar"
          }
        }
      }
    },
    "Search" : {
      "localizations" : {
        "pt" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pesquisar"
          }
...
            "state" : "translated",
            "value" : "Configure sua IA"
          }
        }
      }
    },
    "Settings" : {
      "localizations" : {
        "pt" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Configurações"
          }
...
            "state" : "translated",
            "value" : "Nome da área de trabalho do time"
          }
        }
      }
    },
    "Teams" : {
      "extractionState" : "stale",
      "localizations" : {
        "pt" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Times"
          }
        }
      }
    },
    "Teams need an account" : {
      "extractionState" : "stale",
      "localizations" : {
        "pt" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Times precisam de uma conta"
...
            "state" : "translated",
            "value" : "Bem-vindo de volta"
          }
        }
      }
    },
    "Welcome to Writeopia" : {
      "extractionState" : "stale",
      "localizations" : {
        "pt" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bem-vindo ao Writeopia"
...
